# cjk-ocr

./: .gitignore  Cargo.toml  config.yaml
examples/: inference.rs
src/: dataset.rs  image_data.rs  lib.rs  main.rs  parse_config.rs  training.rs
src/burn_ext/: activation.rs  mod.rs  position_wise_feed_forward.rs  sequential.rs  utils.rs
src/model/: mod.rs  text_rec.rs
src/model/decoder/: tiny.rs
src/model/encoder/: mobilenet_v2.rs  mod.rs
src/utils/: image_reader.rs  label_converter.rs  mod.rs
