[package]
name = "cjk-ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = [
    "train",
    "wgpu",
    "ndarray",
    "tch",
] }
utf8-width = "0.1.7"
indexmap = "2.2.6"
serde = { version = "1.0", features = ["derive"] }
image = "0.25.0"
serde_yaml = "0.9.34"
num-traits = "0.2.18"

[profile.dev]
opt-level = 3
